--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Rock, paper, scissors game</title>
-<script src='script.js' ></script>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+ <head>
+     <meta charset="utf-8">
+   <title>Rock, paper, scissors game</title>
+   <script src="script.js" > </script>
+   <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
 
 
 
-</body>
+ </body>
 </html>
